fix contact menu button spacing

--- a/pennington_photo/static/css/style.css
+++ b/pennington_photo/static/css/style.css
@@ -188,6 +188,10 @@ input[type=number] {
     width: 1200px;
 }
 
+.no1200 {
+    width: auto;
+}
+
 .save-buttons {
     display: flex;
     justify-content: flex-start;
